--- a/client/src/components/styles/HomePage.css
+++ b/client/src/components/styles/HomePage.css
@@ -36,6 +36,7 @@
     padding: 20px;
     border-radius: 15px;
     box-shadow: 0 1px 8px rgba(0,0,0,.2);
+    max-height: 335px;
 }
 
 .right-container {
@@ -240,29 +241,27 @@ code {
 
 .secondary-row {
     display: flex;
-    justify-content: flex-start; /* Align to the start of the row */
-    align-items: flex-start;
+    /* justify-content: flex-start; */
+    justify-content: center;
+    /* align-items: flex-start; */
     flex-wrap: wrap; /* Allow items to wrap as needed */
     padding-top: 20px 0;
     gap: 20px;
-    /* height: 100%; */
+    
 }
 
 .prev-user-lists-container {
     display: flex;
     flex-direction: row; 
-    justify-content: flex-start;
-    align-items: flex-start;
     flex-wrap: wrap;
     gap: 20px; 
     width: 100%; 
     overflow-x: auto; /* Enable horizontal scrolling if content overflows */
-
-    
 }
 
-.prev-list-content {
+.artist-list-content {
     display: flex;
+    flex-direction: column;
     align-items: flex-start;
 }
 
@@ -279,6 +278,8 @@ code {
 }
 
 .prev-lists{
+    display: flex;
+    flex-direction: row;
     margin-right: 10px;;
     background-color: var(--bg-base);
     padding: 10px;
@@ -311,10 +312,6 @@ code {
 }
 
 .list-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
     font-weight: bold;
     font-size: 11px;
     background-color: var(--bg-highlight);
@@ -322,16 +319,18 @@ code {
     padding: 8px;
     box-shadow: 0 1px 5px rgba(0,0,0,.2);
     margin: 3px;
+
+    /* display: flex; 
+    flex-direction: row;
+    align-items: center; */
+
 }
 
 .list-item:hover {
     background-color: var(--bg-elevated-highlight);
 }
 
-.list-item p {
-    text-align: center;
-    margin-bottom: 3px;
-}
+
 
 .title-card h3 {
     color: #1DB954;
@@ -350,7 +349,7 @@ code {
     color: var(--text-subdued);
     font-weight: bold;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
     justify-content: center;
     background-color: var(--bg-elevated-base);
@@ -395,3 +394,151 @@ code {
     background-color: var(--bg-elevated-highlight);
     color: var(--main-green);
 }
+
+.list {
+    background-color: #1a1a1a;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+  }
+  
+  .list-header {
+    background-color: #121212;
+    padding: 10px;
+    color: #fff;
+  }
+  
+  .list-items {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+
+  
+  .list-item:last-child {
+    border-bottom: none;
+  }
+
+  .list-type-h3 {
+    color: var(--text-base);
+  }
+  
+  .track-list-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    width:100%;
+  }
+
+  .track-item-row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #121212;
+    width: 98%;
+  }
+
+  .track-prev-lists {
+    background-color: var(--bg-base);
+    padding: 10px;
+    border-radius: 15px;
+    box-shadow: 0 1px 3px rgba(0, 255, 89, 0.2);
+    display: flex;
+    flex-direction: column;
+    width: 100%; /* Ensure full width */
+  }
+
+  .track-col-1 {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+  }
+
+  .track-col-1 a {
+    display: flex;
+    flex-direction: row;
+  }
+  .track-col-1 a:hover {
+    cursor: auto;
+  }
+  
+  .track-rank {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 25%;
+    padding-left: 10px;
+  }
+
+  .track-col-song-name, .track-col-artist,
+  .track-col-album, .track-col-preview, 
+  .track-col-duration {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    padding: 0 0 0 10%;
+  }
+  .track-col-song-name p, .track-col-artist p, .track-col-album p,
+  .track-col-preview p, .track-col-duration{
+    font-weight: 900;
+    text-align: left;
+  }
+
+  .preview-button {
+    background-color: var(--bg-tinted-base);
+    border: none;
+    border-radius: 50%;
+    box-shadow: 0 1px 8px rgba(0,0,0,.2);
+    color: #000;
+    font-weight: 800;
+    display: inline-flex;        
+    justify-content: center;     
+    align-items: center;         
+    padding: 8px;         
+    transition: color 0.3s ease, background-color 0.3s ease; /* Add transition effects */
+                     
+  }
+
+ .play-svg {
+    width: 10px;
+    height: 10px;
+ }
+
+  .play-preview-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .preview-button:hover {
+    cursor: pointer;
+    color: var(--essential-bright-accent);
+    transition: color 0.3s ease, background-color 0.3s ease; /* Add transition effects */
+  }
+  .Svg-sc-ytk21e-0 {
+    fill: #fff; 
+    width: 10px; 
+    height: 10px;
+  }
+  .Svg-sc-ytk21e-0:hover {
+    fill: #1DB954; 
+    width: 10px; 
+    height: 10px;
+    cursor: pointer;
+  }
+  
+
+  /* .Svg-sc-ytk21e-0, .kPpCsU {
+    -webkit-transform: scale(1.06);
+    transform: scale(1.06);
+    -webkit-transition: none 33ms cubic-bezier(.3,0,0,1);
+    transition: none 33ms cubic-bezier(.3,0,0,1);
+    -webkit-transition-property: all;
+    transition-property: all
+
+  }
+   */
